--- a/JWTLesson/JWTLesson.csproj
+++ b/JWTLesson/JWTLesson.csproj
@@ -7,7 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.0-preview.1.24081.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\JWT.Domain\JWT.Domain.csproj" />
+    <ProjectReference Include="..\JWTLesson.Application\JWTLesson.Application.csproj" />
   </ItemGroup>
 
 </Project>
